// Jest Snapshot v1, https://goo.gl/fbAQLP

exports[`renders with children 1`] = `
<div
  className="ReactExhibit__Header"
>
  <div
    className="Header__Banner"
  >
    <div>
      test
    </div>
  </div>
</div>
`;

exports[`renders without parameters 1`] = `
<div
  className="ReactExhibit__Header"
>
  <div
    className="Header__Banner"
  />
</div>
`;
